wxc/include/ewxw/wxc_glue.h

/* wxPathList */
TClassDefExtend(wxPathList,wxList)

/* wxPen */
TClassDefExtend(wxPen,wxGDIObject)
void       wxPen_Assign( TSelf(wxPen) _obj, TClass(wxPen) pen );
TClass(wxPen) wxPen_CreateDefault(  );
TClass(wxPen) wxPen_CreateFromBitmap( TClass(wxBitmap) stipple, int width );
TClass(wxPen) wxPen_CreateFromColour( TClass(wxColour) col, int width, int style );
void       wxPen_Delete( TSelf(wxPen) _obj );
int        wxPen_GetCap( TSelf(wxPen) _obj );
void       wxPen_GetColour( TSelf(wxPen) _obj, TClassRef(wxColour) _ref );
int        wxPen_GetDashes( TSelf(wxPen) _obj, void* ptr );
int        wxPen_GetJoin( TSelf(wxPen) _obj );
void       wxPen_GetStipple( TSelf(wxPen) _obj, TClassRef(wxBitmap) _ref );
int        wxPen_GetStyle( TSelf(wxPen) _obj );
int        wxPen_GetWidth( TSelf(wxPen) _obj );
TBool      wxPen_IsEqual( TSelf(wxPen) _obj, TClass(wxPen) pen );
TBool      wxPen_Ok( TSelf(wxPen) _obj );
void       wxPen_SetCap( TSelf(wxPen) _obj, int cap );
void       wxPen_SetColour( TSelf(wxPen) _obj, TClass(wxColour) col );
void       wxPen_SetColourSingle( TSelf(wxPen) _obj, TChar r, TChar g, TChar b );
void       wxPen_SetDashes( TSelf(wxPen) _obj, int nb_dashes, void* dash );
void       wxPen_SetJoin( TSelf(wxPen) _obj, int join );
void       wxPen_SetStipple( TSelf(wxPen) _obj, TClass(wxBitmap) stipple );
void       wxPen_SetStyle( TSelf(wxPen) _obj, int style );
void       wxPen_SetWidth( TSelf(wxPen) _obj, int width );